add gstCamera plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,15 @@ else()
     message("Gazebo version: ${GAZEBO_VERSION}")
 endif()
 
+
+pkg_check_modules(GST REQUIRED gstreamer-1.0>=1.8)
+
+if ( NOT (GST_FOUND))
+      message(FATAL_ERROR "Please Install Gstreamer Dev: CMake will Exit")
+endif()
+set(ENV{PKG_CONFIG_PATH})
+
+
 ###### COMPILE RULES ######
 include(CheckCXXCompilerFlag)
 
@@ -133,10 +142,16 @@ link_directories(
         ${GAZEBO_LIBRARY_DIRS}
         )
 
+
+include_directories("${GST_INCLUDE_DIRS}")
+
+link_libraries(${GST_LIBRARIES})
+
 set (plugins_single_header
         ArduPilotPlugin
         ArduCopterIRLockPlugin
         GimbalSmall2dPlugin
+        GazeboGstCameraPlugin
         )
 
 add_library(ArduCopterIRLockPlugin SHARED src/ArduCopterIRLockPlugin.cc)
@@ -144,6 +159,9 @@ target_link_libraries(ArduCopterIRLockPlugin ${GAZEBO_LIBRARIES})
 
 add_library(ArduPilotPlugin SHARED src/ArduPilotPlugin.cc)
 target_link_libraries(ArduPilotPlugin ${GAZEBO_LIBRARIES})
+
+add_library(GazeboGstCameraPlugin SHARED src/GazeboGstCameraPlugin.cc)
+target_link_libraries(GazeboGstCameraPlugin ${GAZEBO_LIBRARIES})
 
 if("${GAZEBO_VERSION}" VERSION_LESS "8.0")
     add_library(GimbalSmall2dPlugin SHARED src/GimbalSmall2dPlugin.cc)
@@ -153,6 +171,7 @@ endif()
 
 install(TARGETS ArduCopterIRLockPlugin DESTINATION ${GAZEBO_PLUGIN_PATH})
 install(TARGETS ArduPilotPlugin DESTINATION ${GAZEBO_PLUGIN_PATH})
+install(TARGETS GazeboGstCameraPlugin DESTINATION ${GAZEBO_PLUGIN_PATH})
 
 install(DIRECTORY models DESTINATION ${GAZEBO_MODEL_PATH}/..)
 install(DIRECTORY worlds DESTINATION ${GAZEBO_MODEL_PATH}/..)
