--- a/models/iris_with_ardupilot/model.config
+++ b/models/iris_with_ardupilot/model.config
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Iris with Standoffs and Camera LiftDrag ArduCopter Plugins</name>
-  <version>1.0</version>
-  <sdf version="1.6">model.sdf</sdf>
+  <name>Iris with ArduPilot</name>
+  <version>2.0</version>
+  <sdf version="1.9">model.sdf</sdf>
 
   <author>
     <name>Fadri Furrer</name>
@@ -24,18 +24,12 @@
 
   <maintainer email="hsu@osrfoundation.org">john hsu</maintainer>
 
-
   <description>
-    starting with iris_with_standoffs
+    Starting with iris_with_standoffs
     add LiftDragPlugin
     add ArduCopterPlugin
-    attach gimbal_small_2d model with GimbalSmall2dPlugin
   </description>
   <depend>
-    <model>
-      <uri>model://gimbal_small_2d</uri>
-      <version>1.0</version>
-    </model>
     <model>
       <uri>model://iris_with_standoffs</uri>
       <version>1.0</version>
